--- a/example.html
+++ b/example.html
@@ -1,9 +1,43 @@
 <html>
   <head>
-    <title>An XMVC Example</title>
-    <script language="text/javascript" src="src/js/xmvc/loader.js"></script>
-    <link rel="xmvc-configuration" type="text/xml" href="example.xml"/>
+    <title>An Joice Example</title>
+    <script type="text/javascript" src="src/main/javascript/string/format.js"></script>
+    <script type="text/javascript" src="src/main/javascript/util/ScriptLoader.js"></script>
+    <script type="text/javascript" src="src/main/javascript/util/Sequence.js"></script>
+    <!-- TODO fix case -->
+    <script type="text/javascript" src="src/main/javascript/util/properties.js"></script>
+    <script type="text/javascript" src="src/main/javascript/joice/Scope.js"></script>
+    <script type="text/javascript" src="src/main/javascript/joice/Context.js"></script>
+    <script type="text/javascript" src="src/main/javascript/joice/ContextConfiguration.js"></script>
+    <script type="text/javascript" src="src/main/javascript/joice/Loader.js"></script>
+    <script type="text/javascript">
+    function Bar (message) {
+      this.message = message
+    }
+
+    function Foo (bar) {
+      this.hello = function () {
+        window.alert(bar.message)
+      }
+    }
+
+    var loader = new JoiceLoader()
+
+    window.onload = function () {
+      var elem = document.getElementById("hello")
+      
+      elem.onclick = function () {
+        /* Our foo might not be loaded yet... */
+        var foo  = loader.context.load("foo")
+        foo.hello()
+      }
+    }
+
+    loader.attachOnload(window)
+    </script>
+    <link rel="context" type="text/xml" href="example.xml"/>
   </head>
   <body>
+    <a id="hello">Hello</a>
   </body>
 </html>
