Finished validating behavior of properties filter.
 * There remain some issues with the design of properties.js, it needs cleaned
   up.  It's currently being held together with a bit of chewing gum.
 * Properties filter (which requires a specific security override to work
   locally, just so you know) now successfully loads a properties file and
   filters all configurations through the properties.
 * It waits until all properties files are fetched before fetching context
   configurations.  This is a flaw that should be fixed some time.

git-svn-id: http://svn.blisted.org/xmvc/trunk@115 ebfa9934-6f10-0410-9599-894cdf3d53f0

--- a/example.html
+++ b/example.html
@@ -36,6 +36,7 @@
     loader.attachOnload(window)
     </script>
     <link rel="context" type="text/xml" href="example.xml"/>
+    <link rel="properties" type="text/plain" href="example.properties"/>
   </head>
   <body>
     <a id="hello">Hello</a>
