Modified API so that attachment is implicit to Joice Loader
git-svn-id: http://svn.blisted.org/xmvc/trunk@117 ebfa9934-6f10-0410-9599-894cdf3d53f0

--- a/example.html
+++ b/example.html
@@ -21,19 +21,17 @@
       }
     }
 
-    var loader = new JoiceLoader()
-
     window.onload = function () {
       var elem = document.getElementById("hello")
       
       elem.onclick = function () {
         /* Our foo might not be loaded yet... */
-        var foo  = loader.context.load("foo")
+        var foo  = context.load("foo")
         foo.hello()
       }
     }
 
-    loader.attachOnload(window)
+    new JoiceLoader(window)
     </script>
     <link rel="context" type="text/xml" href="example.xml"/>
     <link rel="properties" type="text/plain" href="example.properties"/>
