Added initialization strategies (eager/lazy).
 * initialization property now specifies whether an object should be loaded
   lazily or eagerly.  Eager loading takes place once the container is
   configured.  Does not wait for scripts to load (this will be a bug any
   moment).
 * Loader now passes initialization on to the context once all configs and
   properites files are fetched, parsed and applied.

TODO: Faster script loading by fetching non-parameterized script sources
from within the loader (yes, before application!).  This can be done rather
easily without polluting anything -- a single script loader must be shared
between the Configurator and the Loader, and the script loader will keep a
skip list.

git-svn-id: http://svn.blisted.org/xmvc/trunk@120 ebfa9934-6f10-0410-9599-894cdf3d53f0

--- a/example.html
+++ b/example.html
@@ -2,26 +2,17 @@
   <head>
     <title>An Joice Example</title>
     <script type="text/javascript" src="src/main/javascript/string/format.js"></script>
+    <script type="text/javascript" src="src/main/javascript/array/each.js"></script>
     <script type="text/javascript" src="src/main/javascript/util/HttpClient.js"></script>
     <script type="text/javascript" src="src/main/javascript/util/ScriptLoader.js"></script>
     <script type="text/javascript" src="src/main/javascript/util/Sequence.js"></script>
+    <script type="text/javascript" src="src/main/javascript/util/Semaphore.js"></script>
     <!-- TODO fix case -->
     <script type="text/javascript" src="src/main/javascript/util/properties.js"></script>
     <script type="text/javascript" src="src/main/javascript/joice/Scope.js"></script>
     <script type="text/javascript" src="src/main/javascript/joice/Context.js"></script>
     <script type="text/javascript" src="src/main/javascript/joice/ContextConfiguration.js"></script>
     <script type="text/javascript" src="src/main/javascript/joice/Loader.js"></script>
-    <script type="text/javascript">
-    window.onload = function () {
-      var elem = document.getElementById("hello")
-      
-      elem.onclick = function () {
-        /* Our foo might not be loaded yet... */
-        var foo  = context.load("foo")
-        foo.hello()
-      }
-    }
-    </script>
     <!-- Bootstrap automates attachment -->
     <script type="text/javascript" src="src/main/javascript/joice/Bootstrap.js"></script>
     <link rel="context" type="text/xml" href="example.xml"/>
