Fixed race condition and added anonymous objects/arrays.
 * Fixed issue with race condition in system init.
   * Added exhausted/available events to Semaphore rather than using disparate,
     scattered logic to perform initialization.
 * Added anonymous objects.
   * Simply transforms to <object constructor="Object"/>...
 * Added array element support.
   * Simply transforms a snippet such as {{{
<array>
    <value>1</value>
    <value>2</value>
    <ref object="foo"/>
</array>
}}} into {{{
<object constructor="Array">
    <argument><value>1</value></argument>
    <argument><value>2</value></argument>
    <argument object="foo"/>
</object>
}}}
 * Added simple PVTs for these feature to example.*
 * Added Semaphore to ScriptLoader & Context.
   * Now Loader preemptively fetches scripts which do not contain dynamic
     values.  This allows initialization to wait.
 * Added support for eager loading.
 * This whole thing has a horrible flaw in that it doesn't allow the browser to
   know what scripts are where.

git-svn-id: http://svn.blisted.org/xmvc/trunk@124 ebfa9934-6f10-0410-9599-894cdf3d53f0

--- a/example.html
+++ b/example.html
@@ -19,6 +19,8 @@
     <link rel="properties" type="text/plain" href="example.properties"/>
   </head>
   <body>
-    <a id="hello">Hello</a>
+    <a id="hello">Hello</a><br/>
+    <a id="list">Print List</a>
+    <pre id="content"/>
   </body>
 </html>
