Added simple transforming example
git-svn-id: http://svn.blisted.org/xmvc/trunk@143 ebfa9934-6f10-0410-9599-894cdf3d53f0

--- a/example.html
+++ b/example.html
@@ -22,5 +22,7 @@
     <a id="hello">Hello</a><br/>
     <a id="list">Print List</a>
     <pre id="content"/>
+
+    <a id="ping">Ping</a>
   </body>
 </html>
