Functional Joice, nearly functional XMVC.
 * Completed several layers of functionality in Joice, with working positive
   tests (still not unit tests, lacking a good test harness).
 * XMVC is "code complete" untested and non-functional:
   * Basic impedence mismatch issues with design, need time to restructure the
     codebase a bit, things to do:
     * Build a composition based configurator for bootstrapping via joice.
     * Abstract configuration into a data model, rather than this funky thing
       we have now.
     * Functional unit tests for all.

git-svn-id: http://svn.blisted.org/xmvc/trunk@144 ebfa9934-6f10-0410-9599-894cdf3d53f0

--- a/example.html
+++ b/example.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>An Joice Example</title>
+    <script type="text/javascript" src="src/main/javascript/contrib/jitloader.js"></script>
     <script type="text/javascript" src="src/main/javascript/string/format.js"></script>
     <script type="text/javascript" src="src/main/javascript/array/each.js"></script>
     <script type="text/javascript" src="src/main/javascript/util/HttpClient.js"></script>
@@ -15,6 +16,13 @@
     <script type="text/javascript" src="src/main/javascript/joice/Loader.js"></script>
     <!-- Bootstrap automates attachment -->
     <script type="text/javascript" src="src/main/javascript/joice/Bootstrap.js"></script>
+
+    <!-- Can't I use joice to load this?
+    <script type="text/javascript" src="src/main/javascript/xmvc/Configuration.js"></script>
+    <script type="text/javascript" src="src/main/javascript/xmvc/ControllerScope.js"></script>
+    <script type="text/javascript" src="src/main/javascript/xmvc/Transformer.js"></script>
+    -->
+
     <link rel="context" type="text/xml" href="example.xml"/>
     <link rel="properties" type="text/plain" href="example.properties"/>
   </head>
