--- a/example.html
+++ b/example.html
@@ -1,6 +1,12 @@
 <html>
   <head>
-    <title>An Joice Example</title>
+    <title>A Joice Example</title>
+    <script type="text/javascript" src="everything.js"></script>
+    <!--
+    <script type="text/javascript" src="src/main/javascript/compat/jdc-1.0.3.js"></script>
+    <script type="text/javascript" src="src/main/javascript/compat/javeline_xpath.js"></script>
+    <script type="text/javascript" src="src/main/javascript/compat/javeline_xslt.js"></script>
+    <script type="text/javascript" src="src/main/javascript/compat/sarissa.js"></script>
     <script type="text/javascript" src="src/main/javascript/contrib/jitloader.js"></script>
     <script type="text/javascript" src="src/main/javascript/string/format.js"></script>
     <script type="text/javascript" src="src/main/javascript/array/each.js"></script>
@@ -8,16 +14,15 @@
     <script type="text/javascript" src="src/main/javascript/util/ScriptLoader.js"></script>
     <script type="text/javascript" src="src/main/javascript/util/Sequence.js"></script>
     <script type="text/javascript" src="src/main/javascript/util/Semaphore.js"></script>
-    <!-- TODO fix case -->
     <script type="text/javascript" src="src/main/javascript/util/properties.js"></script>
     <script type="text/javascript" src="src/main/javascript/joice/Scope.js"></script>
     <script type="text/javascript" src="src/main/javascript/joice/Context.js"></script>
     <script type="text/javascript" src="src/main/javascript/joice/ContextConfiguration.js"></script>
     <script type="text/javascript" src="src/main/javascript/joice/Loader.js"></script>
-    <!-- Bootstrap automates attachment -->
     <script type="text/javascript" src="src/main/javascript/joice/Bootstrap.js"></script>
+    -->
 
-    <!-- Can't I use joice to load this?
+    <!--
     <script type="text/javascript" src="src/main/javascript/xmvc/Configuration.js"></script>
     <script type="text/javascript" src="src/main/javascript/xmvc/ControllerScope.js"></script>
     <script type="text/javascript" src="src/main/javascript/xmvc/Transformer.js"></script>
@@ -27,8 +32,8 @@
     <link rel="properties" type="text/plain" href="example.properties"/>
   </head>
   <body>
-    <a id="hello">Hello</a><br/>
-    <a id="list">Print List</a>
+    <a href="#" id="hello">Hello</a><br/>
+    <a href="#" id="list">Print List</a>
     <pre id="content"/>
 
     <a id="ping">Ping</a>
